Copyright (C) 2017 Alpha Griffin
@%@~LICENSE~@%@

saw_051817_1 - Allow empty call to debug() which will log the current class and function.

saw_042917_1 - Automatic exception traces for empty-argument calls to fatal, error, or warn.

saw_041417_1 - Better handling for multi-line arguments and exceptions.

saw_041317_2 - Let the log calls take any object as first/only argument (fixes issue #1).

saw_041317_1 - Ignore any calls to log.set() after the first one.

saw_040917_2 - Fix for Python 2.7: skipping the enum, using simple names instead.

saw_040917_1 - Improved formatting and new enum type for setting log level (fixes #44 and #45).

saw_031517_3 - Merge pyproject for new doc theme.

saw_031517_2 - Fixing docstrings.

saw_031517_1 - Merge pyproject and add some more documentation.

saw_031417_4 - Bumping to beta status.

saw_031417_3 - Another merge and some fixing.

saw_031417_4 - Will just have to do without the friendly error check.

saw_031417_2 - Rebuild apidoc.

saw_031417_1 - Merge pyproject 0.0.2.

saw_021817_1 - Initial commit for logging system.
