@@ -52,134 +52,134 @@ def set(level):
         debug("ignoring subsequent call to log.set with:", level=level)
 
 
-def fatal(msg=None, *argv, **kwargs):
+def fatal(_msg=None, *argv, **kwargs):
     """Log a fatal message.
 
     Fatal messages should be reserved for the most critical errors.
     These are generally halting errors.
 
-    :param  msg:    Message to log
-    :type   msg:    str
+    :param  _msg:   Message to log
+    :type   _msg:   str
     """
 
     if this.level >= 1:
-        trace = 0
-        if msg is None:
-            trace = 2
+        _trace = 0
+        if _msg is None:
+            _trace = 2
 
-        _log('!', 'F', msg, trace=trace, *argv, **kwargs);
+        _log('!', 'F', _msg, _trace=_trace, *argv, **kwargs);
 
 
-def error(msg=None, *argv, **kwargs):
+def error(_msg=None, *argv, **kwargs):
     """Log an error.
 
     Errors indicate a problem but are usually recoverable by the application.
 
-    :param  msg:    Message to log
-    :type   msg:    str
+    :param  _msg:   Message to log
+    :type   _msg:   str
     """
 
     if this.level >= 2:
-        trace = 0
-        if msg is None:
-            trace = 2
+        _trace = 0
+        if _msg is None:
+            _trace = 2
 
-        _log('%', 'E', msg, trace=trace, *argv, **kwargs);
+        _log('%', 'E', _msg, _trace=_trace, *argv, **kwargs);
 
 
-def warn(msg=None, *argv, **kwargs):
+def warn(_msg=None, *argv, **kwargs):
     """Log a warning.
 
     Warnings indicate to the user a minor error state or possible condition that might require attention.
 
-    :param  msg:    Message to log
-    :type   msg:    str
+    :param  _msg:   Message to log
+    :type   _msg:   str
     """
 
     if this.level >= 3:
-        trace = 0
-        if msg is None:
-            trace = 2
+        _trace = 0
+        if _msg is None:
+            _trace = 2
 
-        _log('*', 'W', msg, trace=trace, *argv, **kwargs);
+        _log('*', 'W', _msg, _trace=_trace, *argv, **kwargs);
 
 
-def info(msg, *argv, **kwargs):
+def info(_msg, *argv, **kwargs):
     """Log something informative.
 
     An informational message helps the user follow what the program is doing.
 
-    :param  msg:    Message to log
-    :type   msg:    str
+    :param  _msg:   Message to log
+    :type   _msg:   str
     """
 
     if this.level >= 4:
-        _log('#', 'I', msg, *argv, **kwargs);
+        _log('#', 'I', _msg, *argv, **kwargs);
 
 
-def debug(msg=None, *argv, **kwargs):
+def debug(_msg=None, *argv, **kwargs):
     """Log a message for debugging / diagnostic purposes.
 
     Debug messages are not intended for the casual user.
 
-    :param  msg:    Message to log
-    :type   msg:    str
+    :param  _msg:   Message to log
+    :type   _msg:   str
     """
 
     if this.level >= 5:
-        trace = 0
-        if msg is None:
-            trace = 1
+        _trace = 0
+        if _msg is None:
+            _trace = 1
 
-        _log('~', 'D', msg, trace=trace, *argv, **kwargs);
-
-
+        _log('~', 'D', _msg, _trace=_trace, *argv, **kwargs);
 
 
 
-def _log(symbol, letter, msg, trace=0, *argv, **kwargs):
-    msg = _handle(symbol, letter, msg, False, trace=trace)
+
+
+def _log(_symbol, _letter, _msg, _trace=0, *argv, **kwargs):
+    _msg = _handle(_symbol, _letter, _msg, False, _trace=_trace)
 
     for arg in argv:
-        _handle(symbol, letter, arg, True, trace=trace)
+        _handle(_symbol, _letter, arg, True, _trace=_trace)
 
     for name, value in kwargs.items():
-        _handle(symbol, letter, value, True, trace=trace, name=name)
+        _handle(_symbol, _letter, value, True, _trace=_trace, _name=name)
 
 
-def _handle(symbol, letter, obj, arg, trace=0, name=None):
-    if isinstance(obj, Exception):
-        msg = traceback.format_exc()
-    elif trace >= 2:
-        #msg = obj[2].format_exc()
-        msg = traceback.format_exc()
-    elif trace >= 1:
+def _handle(_symbol, _letter, _obj, _arg, _trace=0, _name=None):
+    if isinstance(_obj, Exception):
+        _msg = traceback.format_exc()
+    elif _trace >= 2:
+        #_msg = _obj[2].format_exc()
+        _msg = traceback.format_exc()
+    elif _trace >= 1:
         stack = inspect.stack()[3][0]
         locals = stack.f_locals
         lself = locals['self']
         if lself is not None:
-            msg = lself.__class__.__name__ + '::'
+            _msg = lself.__class__.__name__ + '::'
         else:
-            msg = ''
+            _msg = ''
         code = stack.f_code
-        msg += code.co_name + str(code.co_varnames)
+        _msg += code.co_name + str(code.co_varnames)
     else:
-        msg = str(obj)
+        _msg = str(_obj)
 
-    lines = msg.split('\n')
+    lines = _msg.split('\n')
     for i, line in enumerate(lines):
         if i < 1:
-            if not arg:
-                print(" {}{}{} {}".format(symbol, letter, symbol, line))
-            elif name is None:
-                print(" {} {} : => {}".format(symbol, symbol, line))
+            if not _arg:
+                print(" {}{}{} {}".format(_symbol, _letter, _symbol, line))
+            elif _name is None:
+                print(" {} {} : => {}".format(_symbol, _symbol, line))
             else:
-                print(" {} {} :{} => {}".format(symbol, symbol, name, line))
+                print(" {} {} :{} => {}".format(_symbol, _symbol, _name, line))
         else:
-            if not arg:
-                print(" {} {} {}".format(symbol, symbol, line))
-            elif name is None:
-                print(" {} {} : => {}".format(symbol, symbol, line))
+            if not _arg:
+                print(" {} {} {}".format(_symbol, _symbol, line))
+            elif _name is None:
+                print(" {} {} : => {}".format(_symbol, _symbol, line))
             else:
-                print(" {} {} :{} => {}".format(symbol, symbol, name, line))
+                print(" {} {} :{} => {}".format(_symbol, _symbol, _name, line))
 
