@@ -1,2 +1,2 @@
-__version__ = '0.1.5'
+__version__ = '0.1.6'
 
